# cinchor-sdk

./: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
examples/: debug-mint.ts  full-flow.ts
go/: README.md  attestation.go  cinchor_parity_test.go  client.go  config.go  go.mod  go.sum  ids.go  registry.go  types.go  value_zero_test.go
go/examples/full_flow/: main.go
go/nonce/: manager.go  manager_test.go
py/: LICENSE  README.md  pyproject.toml
py/examples/: full_flow.py
py/src/cinchor/: __init__.py  attestation.py  client.py  config.py  ids.py  registry.py  types.py
py/tests/: test_parity.py
src/: address.ts  attestation.ts  capability-registry.ts  client.ts  config.ts  index.ts  types.ts
